--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Ionic App</title>
     
-    <base href="/our-project-app-dev/">
+    <base href="/Our-Project-App-Dev/">
 
     
     <meta name="color-scheme" content="light dark" />
